prevent multi-line headlines with descenders from clipping

--- a/assets/getcarina.com/src/css/less/pages/docs-single.less
+++ b/assets/getcarina.com/src/css/less/pages/docs-single.less
@@ -28,7 +28,7 @@ body.docs-single {
 
         & > span {
           background: fadeout(white, 10%);
-          line-height: 1;
+          line-height: 1.61;
           padding: 0.2em;
         }
 
@@ -114,7 +114,7 @@ body.docs-single {
       img {
         margin: 0 auto 0.25em auto;
       }
-      
+
       &.right, &.left {
         img {
           margin: 0 0 0.25em 0;
